updated the glitched sections

--- a/index.html
+++ b/index.html
@@ -235,195 +235,188 @@
                 </div>
             </div>
         </section>
+        <!-- <section id="slide6" class="slide slide6"> -->
+        <div id="curosol" class="curosol">
+            <h1 class="curosolTitle">CHOOSE YOUR PATH</h1>
+            <div class="sliderScrollCon">
+                <div id="catCardCon" class="catCardCon">
+                    <div class="catCard catCard1">
+                        <div>
+                            <h1>Eco Harvesters</h1>
+                        </div>
 
-        <section id="slide6" class="slide slide6">
-            <div id="curosol" class="curosol">
-                <h1 class="curosolTitle">CHOOSE YOUR PATH</h1>
-                <div class="sliderScrollCon">
-                    <div id="catCardCon" class="catCardCon">
-                        <div class="catCard catCard1">
-                            <div>
-                                <h1>Eco Harvesters</h1>
-                            </div>
-
-                            <p>Specialized in resource extraction and gathering.</p>
+                        <p>Specialized in resource extraction and gathering.</p>
+                    </div>
+                    <div class="catCard catCard2">
+                        <div>
+                            <h1>Fauna Master</h1>
                         </div>
-                        <div class="catCard catCard2">
-                            <div>
-                                <h1>Fauna Master</h1>
-                            </div>
-                            <p>
-                                Expertise in calming, taming, and interacting with alien
-                                wildlife.
-                            </p>
+                        <p>
+                            Expertise in calming, taming, and interacting with alien
+                            wildlife.
+                        </p>
+                    </div>
+                    <div class="catCard catCard3">
+                        <div>
+                            <h1>Tech artisian</h1>
                         </div>
-                        <div class="catCard catCard3">
-                            <div>
-                                <h1>Tech artisian</h1>
-                            </div>
-                            <p>
-                                Building and crafting with advanced toolkits and augmented
-                                reality for blueprints.
-                            </p>
+                        <p>
+                            Building and crafting with advanced toolkits and augmented
+                            reality for blueprints.
+                        </p>
+                    </div>
+                    <div class="catCard catCard4">
+                        <div>
+                            <h1>Star Warior</h1>
                         </div>
-                        <div class="catCard catCard4">
-                            <div>
-                                <h1>Star Warior</h1>
-                            </div>
-                            <p>Skilled in tactical combat and defense.</p>
+                        <p>Skilled in tactical combat and defense.</p>
+                    </div>
+                    <div class="catCard catCard5">
+                        <div>
+                            <h1>Demolition Aces</h1>
                         </div>
-                        <div class="catCard catCard5">
-                            <div>
-                                <h1>Demolition Aces</h1>
-                            </div>
-                            <p>Specialization in demolition, handling explosive devices.</p>
+                        <p>Specialization in demolition, handling explosive devices.</p>
+                    </div>
+                    <div class="catCard catCard6">
+                        <div>
+                            <h1>Galactic Merchants</h1>
                         </div>
-                        <div class="catCard catCard6">
-                            <div>
-                                <h1>Galactic Merchants</h1>
-                            </div>
-                            <p>Skilled in trade, negotiations, and economic strategies.</p>
+                        <p>Skilled in trade, negotiations, and economic strategies.</p>
+                    </div>
+                    <div class="catCard catCard7">
+                        <div>
+                            <h1>Bio Sages</h1>
                         </div>
-                        <div class="catCard catCard7">
-                            <div>
-                                <h1>Bio Sages</h1>
-                            </div>
-                            <p>Conducting research, analysis of alien environment.</p>
+                        <p>Conducting research, analysis of alien environment.</p>
+                    </div>
+                    <div class="catCard catCard8">
+                        <div>
+                            <h1>Crypto Hackers</h1>
                         </div>
-                        <div class="catCard catCard8">
-                            <div>
-                                <h1>Crypto Hackers</h1>
-                            </div>
-                            <p>Expertise in hacking, cybersecurity, and digital warfare.</p>
+                        <p>Expertise in hacking, cybersecurity, and digital warfare.</p>
+                    </div>
+                    <div class="catCard catCard9">
+                        <div>
+                            <h1>Peace Keepers</h1>
                         </div>
-                        <div class="catCard catCard9">
-                            <div>
-                                <h1>Peace Keepers</h1>
-                            </div>
-                            <p>
-                                Negotiation, conflict resolution, and community management.
-                            </p>
+                        <p>Negotiation, conflict resolution, and community management.</p>
+                    </div>
+                    <div class="catCard catCard10">
+                        <div>
+                            <h1>Master Builders</h1>
                         </div>
-                        <div class="catCard catCard10">
-                            <div>
-                                <h1>Master Builders</h1>
-                            </div>
-                            <p>
-                                Focused on large-scale construction and architectural
-                                development.
-                            </p>
+                        <p>
+                            Focused on large-scale construction and architectural
+                            development.
+                        </p>
+                    </div>
+                    <div class="catCard catCard11">
+                        <div>
+                            <h1>Scout Voyagers</h1>
                         </div>
-                        <div class="catCard catCard11">
-                            <div>
-                                <h1>Scout Voyagers</h1>
-                            </div>
-                            <p>
-                                Expertise in exploration, reconnaissance, and mapping
-                                uncharted territories.
-                            </p>
-                        </div>
+                        <p>
+                            Expertise in exploration, reconnaissance, and mapping uncharted
+                            territories.
+                        </p>
                     </div>
                 </div>
             </div>
-        </section>
-        <section id="slide7" class="slide slide7">
-            <div class="theLore">
-                <div class="thecomicCon">
-                    <img src="/Aquatica/comic.png" alt="" />
-                </div>
-                <div class="loreText">
-                    <h1>THE LORE</h1>
-                    <p>
-                        Understand the depth of aquatica with our stunning comic series
-                    </p>
-                    <a href="www.dreader.com"> GET IT ON DREADER </a>
-                </div>
+        </div>
+        <!-- </section> -->
+        <!-- <section id="slide7" class="slide slide7"> -->
+        <div class="theLore">
+            <div class="thecomicCon">
+                <img src="/Aquatica/comic.png" alt="" />
+            </div>
+            <div class="loreText">
+                <h1>THE LORE</h1>
+                <p>Understand the depth of aquatica with our stunning comic series</p>
+                <a href="www.dreader.com"> GET IT ON DREADER </a>
+            </div>
 
-                <div class="herofooter">
-                    <div class="slider">
-                        <div class="slideContent">
-                            <h1>EXPLORE</h1>
-                            <img src="/Aquatica/star.png" alt="star" />
-                            <h1 class="hollow">SURVIVE</h1>
-                            <img src="/Aquatica/star.png" alt="star" />
-                            <h1>BUILD</h1>
-                            <img src="/Aquatica/star.png" alt="star" />
-                            <h1 class="hollow">CONQUER</h1>
-                            <img src="/Aquatica/star.png" alt="star" />
+            <div class="herofooter">
+                <div class="slider">
+                    <div class="slideContent">
+                        <h1>EXPLORE</h1>
+                        <img src="/Aquatica/star.png" alt="star" />
+                        <h1 class="hollow">SURVIVE</h1>
+                        <img src="/Aquatica/star.png" alt="star" />
+                        <h1>BUILD</h1>
+                        <img src="/Aquatica/star.png" alt="star" />
+                        <h1 class="hollow">CONQUER</h1>
+                        <img src="/Aquatica/star.png" alt="star" />
 
-                            <h1>EXPLORE</h1>
-                            <img src="/Aquatica/star.png" alt="star" />
-                            <h1 class="hollow">SURVIVE</h1>
-                            <img src="/Aquatica/star.png" alt="star" />
-                            <h1>BUILD</h1>
-                            <img src="/Aquatica/star.png" alt="star" />
-                            <h1 class="hollow">CONQUER</h1>
-                            <img src="/Aquatica/star.png" alt="star" />
-                        </div>
-                        <div class="slideContent">
-                            <h1>EXPLORE</h1>
-                            <img src="/Aquatica/star.png" alt="star" />
-                            <h1 class="hollow">SURVIVE</h1>
-                            <img src="/Aquatica/star.png" alt="star" />
-                            <h1>BUILD</h1>
-                            <img src="/Aquatica/star.png" alt="star" />
-                            <h1 class="hollow">CONQUER</h1>
-                            <img src="/Aquatica/star.png" alt="star" />
+                        <h1>EXPLORE</h1>
+                        <img src="/Aquatica/star.png" alt="star" />
+                        <h1 class="hollow">SURVIVE</h1>
+                        <img src="/Aquatica/star.png" alt="star" />
+                        <h1>BUILD</h1>
+                        <img src="/Aquatica/star.png" alt="star" />
+                        <h1 class="hollow">CONQUER</h1>
+                        <img src="/Aquatica/star.png" alt="star" />
+                    </div>
+                    <div class="slideContent">
+                        <h1>EXPLORE</h1>
+                        <img src="/Aquatica/star.png" alt="star" />
+                        <h1 class="hollow">SURVIVE</h1>
+                        <img src="/Aquatica/star.png" alt="star" />
+                        <h1>BUILD</h1>
+                        <img src="/Aquatica/star.png" alt="star" />
+                        <h1 class="hollow">CONQUER</h1>
+                        <img src="/Aquatica/star.png" alt="star" />
 
-                            <h1>EXPLORE</h1>
-                            <img src="/Aquatica/star.png" alt="star" />
-                            <h1 class="hollow">SURVIVE</h1>
-                            <img src="/Aquatica/star.png" alt="star" />
-                            <h1>BUILD</h1>
-                            <img src="/Aquatica/star.png" alt="star" />
-                            <h1 class="hollow">CONQUER</h1>
-                            <img src="/Aquatica/star.png" alt="star" />
-                        </div>
+                        <h1>EXPLORE</h1>
+                        <img src="/Aquatica/star.png" alt="star" />
+                        <h1 class="hollow">SURVIVE</h1>
+                        <img src="/Aquatica/star.png" alt="star" />
+                        <h1>BUILD</h1>
+                        <img src="/Aquatica/star.png" alt="star" />
+                        <h1 class="hollow">CONQUER</h1>
+                        <img src="/Aquatica/star.png" alt="star" />
                     </div>
                 </div>
             </div>
-        </section>
-        <section id="slide8" class="slide slide8">
-            <div class="nft">
-                <div class="nftImgCon">
-                    <img src="/Aquatica/nftMock.png" alt="" />
-                </div>
-                <div class="nftText">
-                    <h1>ASTRO KIDS</h1>
-                    <p>Our Exclusive NFT Collection</p>
-                    <!-- <a href="www.tensor.com">MINT ON TENSOR</a> -->
-                </div>
-                <div class="bgText">
-                    <h1>N</h1>
-                    <h1>F</h1>
-                    <h1>T</h1>
-                </div>
+        </div>
+        <!-- </section> -->
+        <!-- <section id="slide8" class="slide slide8"> -->
+        <div class="nft">
+            <div class="nftImgCon">
+                <img src="/Aquatica/nftMock.png" alt="" />
             </div>
-        </section>
-        <section id="slide9" class="slide slide9">
-            <div id="socials" class="socials">
-                <div class="socialCon">
-                    <h1>READY TO EXPERIENCE</h1>
-                    <h1 class="yellow">NEW ERA OF GAMING<span>?</span></h1>
-                    <form name="email-form" method="post" netlify>
-                        <input type="email" placeholder="your email here..." />
-                        <button type="submit">SUBSCIBE</button>
-                    </form>
-                    <div class="links">
-                        <a href="">
-                            <img src="/Aquatica/x.png" alt="STEAM" />
-                        </a>
+            <div class="nftText">
+                <h1>ASTRO KIDS</h1>
+                <p>Our Exclusive NFT Collection</p>
+                <!-- <a href="www.tensor.com">MINT ON TENSOR</a> -->
+            </div>
+            <div class="bgText">
+                <h1>N</h1>
+                <h1>F</h1>
+                <h1>T</h1>
+            </div>
+        </div>
+        <!-- </section> -->
+        <!-- <section id="slide9" class="slide slide9"> -->
+        <div id="socials" class="socials">
+            <div class="socialCon">
+                <h1>READY TO EXPERIENCE</h1>
+                <h1 class="yellow">NEW ERA OF GAMING<span>?</span></h1>
+                <form name="email-form" method="post" netlify>
+                    <input type="email" placeholder="your email here..." />
+                    <button type="submit">SUBSCIBE</button>
+                </form>
+                <div class="links">
+                    <a href="">
+                        <img src="/Aquatica/x.png" alt="STEAM" />
+                    </a>
 
-                        <a href="">
-                            <img src="/Aquatica/discord.png" alt="EPIC" />
-                        </a>
-                    </div>
+                    <a href="">
+                        <img src="/Aquatica/discord.png" alt="EPIC" />
+                    </a>
                 </div>
             </div>
-        </section>
+        </div>
+        <!-- </section> -->
     </div>
-    <!-- </div> -->
-    <!-- </div> -->
     <!-- <div class="temp"></div> -->
 
     <script type="module" src="/main.js"></script>
