fixed some issues

--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                     <!-- Helmet -->
                     <h1>Ecodome</h1>
                     <p>
-                        Crafted to convey the expressions of the Astrokid while also
-                        ensuring their safety.
+                        Designed to keep the Astrokidz safe in Aquatica, also relays their
+                        expressions while exploring all of it's wonders and dangers.
                     </p>
                 </div>
 
@@ -186,33 +186,33 @@
                     <!-- <h1>Eco Buds</h1> -->
                     <h1>echopod</h1>
                     <p>
-                        A communication device that coordinates with the bots crafted by
-                        the player.
+                        A communication device that coordinates with the Bots crafted by
+                        the Astrokidz.
                     </p>
                 </div>
                 <div class="modelText">
                     <!--Generator  -->
                     <h1>GenCore</h1>
                     <p>
-                        This device gradually refills the carrier over time based on the
-                        level, powering the Astrokid's suit.
+                        Fills up the backpack energy storage over time, ensuring it's
+                        available to power the suit and keep you safe through every
+                        adventure
                     </p>
                 </div>
                 <div class="modelText">
                     <!--hands  -->
                     <h1>ArcLink</h1>
                     <p>
-                        The mobile control center that provides access to all operations
-                        and communications for the player.
+                        Mobile control center that provides the Astrokidz with access to
+                        remote operations and communications.
                     </p>
                 </div>
                 <div class="modelText">
                     <!--Backpack  -->
                     <h1>backvault</h1>
                     <p>
-                        This serves as the energy carrier that powers the suit. It
-                        provides storage that helps the player carry items while
-                        navigating Aquatica.
+                        Stores energy to power the suit and helps the Astrokidz carry
+                        items while navigating Aquatica.
                     </p>
                 </div>
 
@@ -220,17 +220,16 @@
                     <!-- Belt  -->
                     <h1>supplystrap</h1>
                     <p>
-                        A customizable accessory holder for easy access. It can hold
-                        ammunition, med kits, etc.
+                        Customizable accessory holder for easy access, capable of holding
+                        ammunition, med kits, and more.
                     </p>
                 </div>
                 <div class="modelText">
                     <!-- Shoes  -->
                     <h1>Propelpads</h1>
                     <p>
-                        Equipped with thrusters, these shoes provide a boost to the player
-                        when needed, aiding in navigating the vast terrain or quickly
-                        escaping threats.
+                        Equipped with thrusters, the shoes give the Astrokidz a boost when
+                        needed in navigating the vast terrain or quickly escaping threats.
                     </p>
                 </div>
             </div>
@@ -267,7 +266,7 @@
                     </div>
                     <div class="catCard catCard4">
                         <div>
-                            <h1>Star Warior</h1>
+                            <h1>Warlord</h1>
                         </div>
                         <p>Skilled in tactical combat and defense.</p>
                     </div>
@@ -287,7 +286,7 @@
                         <div>
                             <h1>Bio Sages</h1>
                         </div>
-                        <p>Conducting research, analysis of alien environment.</p>
+                        <p>Conducting research and analysis of alien environments.</p>
                     </div>
                     <div class="catCard catCard8">
                         <div>
@@ -303,7 +302,7 @@
                     </div>
                     <div class="catCard catCard10">
                         <div>
-                            <h1>Master Builders</h1>
+                            <h1>Builders</h1>
                         </div>
                         <p>
                             Focused on large-scale construction and architectural
@@ -324,7 +323,7 @@
         </div>
         <!-- </section> -->
         <!-- <section id="slide7" class="slide slide7"> -->
-        <div class="theLore">
+        <div class="theLore" id="LORE">
             <div class="thecomicCon">
                 <img src="/Aquatica/comic.png" alt="" />
             </div>
@@ -379,7 +378,7 @@
         </div>
         <!-- </section> -->
         <!-- <section id="slide8" class="slide slide8"> -->
-        <div class="nft">
+        <div class="nft" id="NFT">
             <div class="nftImgCon">
                 <img src="/Aquatica/nftMock.png" alt="" />
             </div>
@@ -402,7 +401,7 @@
                 <h1 class="yellow">NEW ERA OF GAMING<span>?</span></h1>
                 <form name="email-form" method="post" netlify>
                     <input type="email" placeholder="your email here..." />
-                    <button type="submit">SUBSCIBE</button>
+                    <button type="submit">SUBSCRIBE</button>
                 </form>
                 <div class="links">
                     <a href="">
