last non breaking commit

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     </div>
                     <div class="catCard catCard4">
                         <div>
-                            <h1>Warlord</h1>
+                            <h1>Star Warlord</h1>
                         </div>
                         <p>Skilled in tactical combat and defense.</p>
                     </div>
@@ -302,7 +302,7 @@
                     </div>
                     <div class="catCard catCard10">
                         <div>
-                            <h1>Builders</h1>
+                            <h1>Master Builders</h1>
                         </div>
                         <p>
                             Focused on large-scale construction and architectural
