--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                 <img src="/Aquatica/nftMock.png" alt="" />
             </div>
             <div class="nftText">
-                <h1>ASTRO KIDS</h1>
+                <h1>ASTRO KIDZ</h1>
                 <p>Our Exclusive NFT Collection</p>
                 <!-- <a href="www.tensor.com">MINT ON TENSOR</a> -->
             </div>
