--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-
     <div id="loader">
         <div class="loaderImg">
             <img src="/Aquatica/favicon.ico" alt="" />
@@ -173,6 +172,14 @@
         <section id="slide5" class="slide slide5">
             <canvas id="canvas"></canvas>
             <div class="modelTextCon">
+                <div class="modelText">
+                    <!-- Start -->
+                    <h1>The character</h1>
+                    <p>
+                        Astrokidz are the avatars inside the game who will have unqiue
+                        features and skills based on gear and choice of persona
+                    </p>
+                </div>
                 <div class="modelText">
                     <!-- Helmet -->
                     <h1>Ecodome</h1>
@@ -331,7 +338,7 @@
             <div class="loreText">
                 <h1>THE LORE</h1>
                 <p>Understand the depth of aquatica with our stunning comic series</p>
-                <a href="www.dreader.com"> GET IT ON DREADER </a>
+                <a href="www.dreader.com"> COMMING SOON ON DREADER </a>
             </div>
 
             <div class="herofooter">
@@ -382,6 +389,13 @@
         <div class="nft" id="NFT">
             <div class="nftImgCon">
                 <img src="/Aquatica/nftMock.png" alt="" />
+
+                <!-- <img class="AbsStars star1" src="/Aquatica/blueStar.png" alt=""> -->
+                <!-- <img class="AbsStars star2" src="/Aquatica/greenStar.png" alt=""> -->
+                <!-- <img class="AbsStars star3" src="/Aquatica/blueStar.png" alt=""> -->
+                <!-- <img class="AbsStars star4" src="/Aquatica/blueStar.png" alt=""> -->
+                <!-- <img class="AbsStars star5" src="/Aquatica/blueStar.png" alt=""> -->
+                <!-- <img class="AbsStars star6" src="/Aquatica/greenStar.png" alt=""> -->
             </div>
             <div class="nftText">
                 <h1>ASTROKIDZ</h1>
