--- a/index.html
+++ b/index.html
@@ -390,12 +390,13 @@
             <div class="nftImgCon">
                 <img src="/Aquatica/nftMock.png" alt="" />
 
-                <!-- <img class="AbsStars star1" src="/Aquatica/blueStar.png" alt=""> -->
-                <!-- <img class="AbsStars star2" src="/Aquatica/greenStar.png" alt=""> -->
-                <!-- <img class="AbsStars star3" src="/Aquatica/blueStar.png" alt=""> -->
-                <!-- <img class="AbsStars star4" src="/Aquatica/blueStar.png" alt=""> -->
-                <!-- <img class="AbsStars star5" src="/Aquatica/blueStar.png" alt=""> -->
-                <!-- <img class="AbsStars star6" src="/Aquatica/greenStar.png" alt=""> -->
+                <img class="AbsStars star1" src="/Aquatica/blueStar.png" alt="">
+                <img class="AbsStars star2" src="/Aquatica/greenStar.png" alt="">
+                <img class="AbsStars star3" src="/Aquatica/blueStar.png" alt="">
+                <img class="AbsStars star4" src="/Aquatica/blueStar.png" alt="">
+                <img class="AbsStars star5" src="/Aquatica/blueStar.png" alt="">
+                <img class="AbsStars star6" src="/Aquatica/greenStar.png" alt="">
+
             </div>
             <div class="nftText">
                 <h1>ASTROKIDZ</h1>
