--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             <div class="loreText">
                 <h1>THE LORE</h1>
                 <p>Understand the depth of aquatica with our stunning comic series</p>
-                <a href="www.dreader.com"> COMMING SOON ON DREADER </a>
+                <a id="dreader" href="www.dreader.com"> COMMING SOON ON DREADER </a>
             </div>
 
             <div class="herofooter">
