did the text placement

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         <div class="nftText">
           <h1>ASTROKIDZ</h1>
           <p>Our Exclusive NFT Collection</p>
-          <a id="dreader" href="https://www.hel.io/solutions/nfts">PRESALE ON HELIO</a>
+          <!-- <a id="dreader" href="https://www.hel.io/solutions/nfts">PRESALE ON HELIO</a> -->
         </div>
         <div class="bgText">
           <h1>N</h1>
@@ -422,11 +422,11 @@
           </form>
           <div class="links">
             <a href="">
-              <img src="/Aquatica/x.png" alt="STEAM" />
+              <img src="/Aquatica/x.png" alt="X" />
             </a>
 
             <a href="">
-              <img src="/Aquatica/discord.png" alt="EPIC" />
+              <img src="/Aquatica/discord.png" alt="Discord" />
             </a>
           </div>
         </div>
