--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
                         Embark on a voyage where the marvels<br class="mobDis" />
                         of a boundless ocean planet unfold before you
                     </p>
-                    <a class="presaleBtn" href="https://www.hel.io/solutions/nfts">Presale</a>
+                    <a class="presaleBtn" href="https://www.hel.io/solutions/nfts">PRE SALE</a>
                     <div class="topImgCon" id="">
-                        <a href="">
+                        <a href="https://twitter.com/TheVorld_">
                             <img class="TopImg colorInvert" src="/Aquatica/x.png" alt="X" />
                         </a>
-                        <a href="">
+                        <a href="https://discord.gg/H7RekzdC">
                             <img class="TopImg colorInvert" src="/Aquatica/discord.png" alt="Discord" />
                         </a>
 
-                        <a href="">
-                            <img class="TopImg telegram" src="/Aquatica/tele_white.svg" alt="X" />
+                        <a href="https://t.me/thevorld">
+                            <img class="TopImg telegram" src="/Aquatica/tele_white.svg" alt="TeleGram" />
                         </a>
                     </div>
                 </div>
@@ -433,13 +433,13 @@
                     <button type="submit">SUBSCRIBE</button>
                 </form>
                 <div class="links">
-                    <a href="">
+                    <a href="https://twitter.com/TheVorld">
                         <img src="/Aquatica/x.png" alt="X" />
                     </a>
-                    <a href="">
-                        <img class="telegram" src="/Aquatica/telegram.svg" alt="X" />
+                    <a href="https://t.me/thevorld">
+                        <img class="telegram" src="/Aquatica/telegram.svg" alt="TeleGram" />
                     </a>
-                    <a href="">
+                    <a href="https://discord.gg/H7RekzdC">
                         <img src="/Aquatica/discord.png" alt="Discord" />
                     </a>
                 </div>
