--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
             <img src="/Aquatica/favicon.ico" alt="" />
         </div>
         <div class="loaderText">
-            <!-- <h1>Tips: </h1> -->
             <p id="loaderTip"></p>
         </div>
     </div>
 
-    <!-- <div id="pageCon"> -->
     <div id="page" class="page">
         <div class="heroSec">
             <div class="heroImg"></div>
@@ -40,18 +38,19 @@
                         Embark on a voyage where the marvels<br class="mobDis" />
                         of a boundless ocean planet unfold before you
                     </p>
-                    <a class="presaleBtn" href="https://www.hel.io/solutions/nfts">PRE SALE</a>
-                    <div class="topImgCon" id="">
-                        <a href="https://twitter.com/TheVorld_">
-                            <img class="TopImg colorInvert" src="/Aquatica/x.png" alt="X" />
-                        </a>
-                        <a href="https://discord.gg/H7RekzdC">
-                            <img class="TopImg colorInvert" src="/Aquatica/discord.png" alt="Discord" />
-                        </a>
-
-                        <a href="https://t.me/thevorld">
-                            <img class="TopImg telegram" src="/Aquatica/tele_white.svg" alt="TeleGram" />
-                        </a>
+                    <div class="TopSocialCon">
+                        <a class="presaleBtn" href="https://www.hel.io/solutions/nfts">PRE SALE</a>
+                        <div class="topImgCon" id="">
+                            <a href="https://twitter.com/TheVorld_">
+                                <img class="TopImg colorInvert" src="/Aquatica/x.png" alt="X" />
+                            </a>
+                            <a href="https://discord.gg/H7RekzdC">
+                                <img class="TopImg colorInvert" src="/Aquatica/discord.png" alt="Discord" />
+                            </a>
+                            <a href="https://t.me/thevorld">
+                                <img class="TopImg telegram" src="/Aquatica/tele_white.svg" alt="TeleGram" />
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="herofooter">
@@ -101,7 +100,6 @@
             <div class="shadeCover"></div>
         </div>
 
-        <!-- <div id="scrollbody" class="scrollbody"> -->
         <section id="slide1" class="slide slide1">
             <div class="contextText contextText1">
                 <h1>01</h1>
@@ -187,7 +185,6 @@
             <canvas id="canvas"></canvas>
             <div class="modelTextCon">
                 <div class="modelText">
-                    <!-- Start -->
                     <h1>The character</h1>
                     <p>
                         Astrokidz are the avatars inside the game who will have unqiue
@@ -195,7 +192,6 @@
                     </p>
                 </div>
                 <div class="modelText">
-                    <!-- Helmet -->
                     <h1>Ecodome</h1>
                     <p>
                         Designed to keep the Astrokidz safe in Aquatica, also relays their
@@ -204,8 +200,6 @@
                 </div>
 
                 <div class="modelText">
-                    <!--Ear piece  -->
-                    <!-- <h1>Eco Buds</h1> -->
                     <h1>echopod</h1>
                     <p>
                         A communication device that coordinates with the Bots crafted by
@@ -213,7 +207,6 @@
                     </p>
                 </div>
                 <div class="modelText">
-                    <!--Generator  -->
                     <h1>GenCore</h1>
                     <p>
                         Fills up the backpack energy storage over time, ensuring it's
@@ -222,7 +215,6 @@
                     </p>
                 </div>
                 <div class="modelText">
-                    <!--hands  -->
                     <h1>ArcLink</h1>
                     <p>
                         Mobile control center that provides the Astrokidz with access to
@@ -230,7 +222,6 @@
                     </p>
                 </div>
                 <div class="modelText">
-                    <!--Backpack  -->
                     <h1>backvault</h1>
                     <p>
                         Stores energy to power the suit and helps the Astrokidz carry
@@ -239,7 +230,6 @@
                 </div>
 
                 <div class="modelText">
-                    <!-- Belt  -->
                     <h1>supplystrap</h1>
                     <p>
                         Customizable accessory holder for easy access, capable of holding
@@ -247,7 +237,6 @@
                     </p>
                 </div>
                 <div class="modelText">
-                    <!-- Shoes  -->
                     <h1>Propelpads</h1>
                     <p>
                         Equipped with thrusters, the shoes give the Astrokidz a boost when
@@ -256,7 +245,6 @@
                 </div>
             </div>
         </section>
-        <!-- <section id="slide6" class="slide slide6"> -->
         <div id="curosol" class="curosol">
             <h1 class="curosolTitle">CHOOSE YOUR PATH</h1>
             <div class="sliderScrollCon">
@@ -343,8 +331,6 @@
                 </div>
             </div>
         </div>
-        <!-- </section> -->
-        <!-- <section id="slide7" class="slide slide7"> -->
         <div class="theLore" id="LORE">
             <div class="thecomicCon">
                 <img src="/Aquatica/comic.png" alt="" />
@@ -398,8 +384,6 @@
                 </div>
             </div>
         </div>
-        <!-- </section> -->
-        <!-- <section id="slide8" class="slide slide8"> -->
         <div class="nft" id="NFT">
             <div class="nftImgCon">
                 <img src="/Aquatica/nftMock.png" alt="" />
@@ -414,7 +398,6 @@
             <div class="nftText">
                 <h1>ASTROKIDZ</h1>
                 <p>Our Exclusive NFT Collection</p>
-                <!-- <a id="dreader" href="https://www.hel.io/solutions/nfts">PRESALE ON HELIO</a> -->
             </div>
             <div class="bgText">
                 <h1>N</h1>
@@ -422,8 +405,6 @@
                 <h1>T</h1>
             </div>
         </div>
-        <!-- </section> -->
-        <!-- <section id="slide9" class="slide slide9"> -->
         <div id="socials" class="socials">
             <div class="socialCon">
                 <h1>READY TO EXPERIENCE</h1>
@@ -445,9 +426,7 @@
                 </div>
             </div>
         </div>
-        <!-- </section> -->
     </div>
-    <!-- <div class="temp"></div> -->
 
     <script type="module" src="/main.js"></script>
     <script type="module" src="canvas.js"></script>
