--- a/index.html
+++ b/index.html
@@ -25,6 +25,27 @@
         </div>
     </div>
 
+    <div id="PresalePopupCon">
+        <div id="PresalePopup">
+            <div class="PopImgCon">
+                <img src="/Aquatica/popup.png" alt="" />
+                <div class="popTextCon">
+                    <div class="popNav">
+                        <img class="hidden" src="/Aquatica/cross.png" alt="" />
+                        <h1 class="montserrat-thin">NOTE</h1>
+                        <img id="popClose" src="/Aquatica/cross.png" alt="" />
+                    </div>
+                    <img class="popLine" src="/Aquatica/line.png" alt="" />
+                    <h1 class="montserrat-medium">
+                        PUBLIC PRESALE WILL BE LIVE SOON AND WILL BE ANNOUNCED IN OUR
+                        DISCORD. JOIN VORLD AND GET A CHANCE TO SECURE YOUR SPOT
+                    </h1>
+                    <a href="https://discord.gg/H7RekzdC">JOIN DISCORD</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div id="page" class="page">
         <div class="heroSec">
             <div class="heroImg"></div>
@@ -39,7 +60,7 @@
                         of a boundless ocean planet unfold before you
                     </p>
                     <div class="TopSocialCon">
-                        <a class="presaleBtn" href="https://www.hel.io/solutions/nfts">PRE SALE</a>
+                        <a id="popOpen" class="presaleBtn">PRE SALE</a>
                         <div class="topImgCon" id="">
                             <a href="https://twitter.com/TheVorld_">
                                 <img class="TopImg colorInvert" src="/Aquatica/x.png" alt="X" />
@@ -338,7 +359,8 @@
             <div class="loreText">
                 <h1>THE LORE</h1>
                 <p>Understand the depth of aquatica with our stunning comic series</p>
-                <a id="dreader" href="www.dreader.com"> COMMING SOON ON DREADER </a>
+                <a id="dreader"> COMMING SOON ON DREADER </a>
+                <!-- <a id="dreader" href="www.dreader.com"> COMMING SOON ON DREADER </a> -->
             </div>
 
             <div class="herofooter">
